# CMakeProjects

cmakeMultiFilesProject/: .gitignore
cmakeMultiFilesProject/src/: CMakeLists.txt
my_first_cmake_project/src/: CMakeLists.txt  my_first_cmake_program.cpp
